refactor and added test cases
