# src/main/resources/api-spec/recipe-manage-openapi.yaml
@@ -26,7 +26,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Recipe'
+                  $ref: '#/components/schemas/RecipeResponse'
     post:
       summary: Add a new recipe
       description: Add a new recipe to the system
@@ -37,10 +37,9 @@ paths:
         description: Recipe object to be added
         required: true
         content:
-
           application/json:
             schema:
-              $ref: '#/components/schemas/Recipe'
+              $ref: '#/components/schemas/RecipeRequest'
       responses:
         '201':
           description: Created
@@ -64,7 +63,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Recipe'
+                $ref: '#/components/schemas/RecipeResponse'
         '404':
           description: Recipe not found
     put:
@@ -86,7 +85,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Recipe'
+              $ref: '#/components/schemas/RecipeRequest'
       responses:
         '200':
           description: OK
@@ -158,15 +157,12 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Recipe'
+                  $ref: '#/components/schemas/RecipeResponse'
 components:
   schemas:
-    Recipe:
+    RecipeRequest:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
         name:
           type: string
         isVegetarian:
@@ -182,3 +178,19 @@ components:
         - isVegetarian
         - servings
         - instructions
+    RecipeResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        isVegetarian:
+          type: boolean
+        servings:
+          type: integer
+        ingredients:
+          type: string
+        instructions:
+          type: string
